--- a/haemu.cabal
+++ b/haemu.cabal
@@ -29,17 +29,23 @@ library
   hs-source-dirs:    src
   default-language:  Haskell2010
 
-executable haemu
-  main-is:           Main.hs
+-- executable haemu
+--  main-is:           Main.hs
   -- other-modules:
-  build-depends:     base ==4.6.*
-  hs-source-dirs:    src
-  default-language:  Haskell2010
+--  build-depends:     base ==4.6.*
+--  hs-source-dirs:    src
+--  default-language:  Haskell2010
 
 test-suite haemu-tests
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   tests
+   include-dirs:     src
    build-depends:
        base >3 && <5
      , haemu
+     , hspec
+     , lens
+     , array
+     , QuickCheck < 2.6
+   default-language: Haskell2010
