--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: haskell
+before_install:
+  # Update cabal
+  - cabal update
+
+  # Try installing some of the build-deps with apt-get for speed.
+  - travis/cabal-apt-install $mode
