--- a/haemu.cabal
+++ b/haemu.cabal
@@ -19,6 +19,7 @@ source-repository head
 library
   exposed-modules:
       Haemu.Monad
+      Haemu.Instruction
   build-depends:
       base <5 && >3
     , mtl
