--- a/haemu.cabal
+++ b/haemu.cabal
@@ -26,15 +26,9 @@ library
     , lens
     , vector
     , primitive
+    , OddWord
   hs-source-dirs:    src
   default-language:  Haskell2010
-
--- executable haemu
---  main-is:           Main.hs
-  -- other-modules:
---  build-depends:     base ==4.6.*
---  hs-source-dirs:    src
---  default-language:  Haskell2010
 
 test-suite haemu-tests
    type:             exitcode-stdio-1.0
@@ -47,5 +41,6 @@ test-suite haemu-tests
      , hspec
      , lens
      , vector
+     , OddWord
      , QuickCheck
    default-language: Haskell2010
