--- a/haemu.cabal
+++ b/haemu.cabal
@@ -27,6 +27,7 @@ library
     , vector
     , primitive
     , OddWord
+    , control-monad-exception
   hs-source-dirs:    src
   default-language:  Haskell2010
 
