--- a/haemu.cabal
+++ b/haemu.cabal
@@ -20,6 +20,7 @@ library
   exposed-modules:
       Haemu.Monad
       Haemu.Instruction
+      Haemu.Types
   build-depends:
       base <5 && >3
     , mtl
@@ -28,6 +29,7 @@ library
     , primitive
     , OddWord
     , control-monad-exception
+    , stateref
   hs-source-dirs:    src
   default-language:  Haskell2010
 
@@ -44,4 +46,5 @@ test-suite haemu-tests
      , vector
      , OddWord
      , QuickCheck
+     , primitive
    default-language: Haskell2010
